# pysh

./: .env.example  Makefile  README.md  pyproject.toml
pysh/: shell.py
tests/: test_shell.py
