[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pysh"
version = "0.1.0"
description = "A Python-powered shell alternative with smart autocomplete"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
pysh = "pysh.shell:main"
